Fixed Swagger Tags
